--- a/Week_11_web/Web-Design-Challenge/Resources/css/style.css
+++ b/Week_11_web/Web-Design-Challenge/Resources/css/style.css
@@ -1,4 +1,123 @@
 /* web vis style.css */
+html {
+    position: relative;
+    min-height: 100%;
+  }
+
+body {
+    margin-bottom: 150px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    background-color: rgb(2, 28, 54);
+  }
+  
+  @media only screen and (max-width: 800px) {
+    body {
+      background-color: white;
+    }
+  }
+  
+  .w {
+    color: white;
+  }
+
+  .a {
+   background-color: rgb(0, 1, 189);
+  }
+
+  .a.hover {
+    background-color: white;
+   }
+
+  .header {
+    margin-bottom: 33px;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-size: 32px;
+    font-weight: bold;
+    color: rgb(0, 1, 189);
+  }
+  
+.description-content {
+    background-color: white;
+    padding: 30px;
+    padding-bottom: 100px;
+    display: block;
+ }
+  
+.description-content > p {
+    padding-top: 20px;
+    font-size: 16px;
+    line-height: 30px;
+    color: slategray;
+    display: block;
+  }
+  
+  .description-text {
+    padding-bottom: 20px;
+  }
+  
+  #description-image {
+    float: left;
+    min-width: 200px;
+    max-width: 500px;
+    padding-top: 20px;
+    padding-right: 20px;
+    tex
+  }
+
+  @media only screen and (max-width: 800px) {
+
+    .description-content {
+      padding: 0;
+      margin-top: 0;
+
+    }
+    
+  }
+
+  #logo {
+    height: 60px;
+    padding-top: 20px;
+    padding-bottom: 5px;
+    margin-left: 70px;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-size: 24px;
+    font-weight: bold;
+  }
+  
+  #logo:hover {
+    opacity: 0.7;
+  }
+  
+  .navbar-right-custom {
+    padding-top: 6px;
+    padding-right: 20px;
+    font-family: Arial;
+    font-weight: lighter;
+  }
+  
+  /* Nav element hover state */
+  .navbar-default .navbar-nav > li > a:hover {
+    color: rgb(0, 1, 189);
+  }
+  
+  /* Media query for nav */
+  @media only screen and (max-width: 800px) {
+    .navbar-header {
+      background-color: white;
+    }
+  
+    #logo {
+      width: 100%;
+      height: 60px;
+      padding-top: 20px;
+      padding-bottom: 5px;
+      margin-left: 0;
+      font-family: Georgia, Times, "Times New Roman", serif;
+      font-size: 24px;
+      font-weight: bold;
+    }
+  }
+
 
 #vis_images {
     padding-top: 15px;
@@ -7,22 +126,16 @@
 
 #imageNav-area {
     width: 100%;
-    /* Box-model */
+    height: 100%;
     padding: 30px 30px 43px;
-    /* Positioning */
-    margin-top: 32px;
-    /* Visual */
-    background-color: #fff;
+    background-color: white;
 }
 
 .imageNav-header {
-    /* Positioning */
     margin-bottom: 15px;
     font-family: Georgia, Times, "Times New Roman", serif;
-    /* Typography */
     font-size: 25px;
     font-weight: bold;
-    color: #4aaaa5;
 }
 
 .imageNav-photo {
@@ -36,5 +149,24 @@
 }
 
 .imageNav-photo.active {
-    border: 2px solid #4aaaa5;
+    border: 2px solid rgb(0, 1, 189);
 }
+
+.footer {
+    background-color: rgb(70, 70, 70);
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 60px;
+    margin-top: 30px;
+}
+
+ .footer-text {
+    margin-top: 15px;
+    text-align: center;
+ } 
+
+.footer-bar {
+    height: 6px;
+    padding-top: 3px;
+ }
