web-scrape screen shots

--- a/week_12_web_scraping/Missions_to_Mars/app/templates/index.html
+++ b/week_12_web_scraping/Missions_to_Mars/app/templates/index.html
@@ -33,7 +33,7 @@
     <!-- Mars Featured Image -->
     <div class="row" id="mars-featured-image">
       <div class="col-md-8">
-        <h2>Featured Mars Image</h2>
+        <h2>Featured NASA Image</h2>
 
           <!-- if images is False/None/non-existent, then default to error message -->
           <img src="{{mars.featured_image | default('static/images/error.png', true) }}" class="img-responsive"
